--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         </div>
         <div class="col-lg-6 d-none d-lg-block wow zoomIn">
           <div class="img-place mobile-preview shadow floating-animate">
-            <!--gambar deesain 3d  grhablock-->
-            <img src="../assets/img/rumahgadang.jpg" style ="height:500px; width:500px;" alt="">
+            <!--gambar asli rumah gadang-->
+            <img src="img/rumahgadang.jpg" style ="height:500px; width:500px;" alt="">
           </div>          
         </div>
       </div>
@@ -89,7 +89,7 @@
 </div>
 
 <!--Sejarah Ruah Gadang -->
-<div class="page-section bg-image" style="background-image:url(../assets/img/introproduk.png);">
+<div class="page-section bg-image" style="background-image:url(img/introproduk.png);">
   <div class="container">
     <h4 class="text-center wow fadeIn" style="font-family:dosis;">Bagaimana Sejarah Rumah Gadang ini?</h4>
     <div class="row">
@@ -118,7 +118,7 @@
 </div>
 
 <!--Sejarah Ruah Gadang  -->
-<div class="page-section bg-image" style="background-image:url(../assets/img/introproduk.png);">
+<div class="page-section bg-image" style="background-image:url(img/introproduk.png);">
   <div class="container">
     <h4 class="text-center wow fadeIn" style="font-family:dosis;">Yuk dilanjutin bacanya!</h4>
     <div class="row">
@@ -148,7 +148,7 @@
 </div>
 
 <!---Maps rumah Gadang-->
-<div class="page-section no-scroll bg-image" style="background-image:url(../assets/img/introproduk.png);">
+<div class="page-section no-scroll bg-image" style="background-image:url(img/introproduk.png);">
   <div class="container">
     <h4 class="text-center wow fadeIn" style="font-family:dosis;">Dimana teman - teman bisa menemukan rumah Rumah Gadang ini?</h4>
     <div class="col-lg-6" style="justify-items:center;">
@@ -163,7 +163,7 @@
 
 <!--nilai - nilai  keunikan yang ada pada rumah  adat tsbt -->
 
-<div class="page-section no-scroll bg-image" style="background-image:url(../assets/img/introproduk.png);">
+<div class="page-section no-scroll bg-image" style="background-image:url(img/introproduk.png);">
   <div class="container">
     <h2 class="text-center wow fadeIn" style="font-family:dosis;">Apa saja sih keunikan  dari Rumah Gadang ini?</h2>
     <p style="text-align:center;">Berikut berbagai keunikannya!</p>
@@ -221,7 +221,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid bg-image" style="background-image:url(../assets/img/introproduk.png);">
+  <div class="container-fluid bg-image" style="background-image:url(img/introproduk.png);">
     <div class="owl-carousel stack-carousel mt-5 wow fadeInUp">
       <div class="item bg-white">
         <!--untuk menambahkan  rating-->
@@ -294,7 +294,7 @@
 
 <!---FAQ has Deleted-->
 <!-- Pasrtner produksi  Grha  Block -->
-<div class="page-section bbg-iamge" style="background-image:url(../assets/img/halaman4.png);">
+<div class="page-section bbg-iamge" style="background-image:url(img/halaman4.png);">
   <div class="container">
     <div class="text-center wow fadeIn">
       <h2 class="mb-4" style="color:#283618; font-family:baloo bhai;">Partner Kami</h2>
