--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div class="col-md-6 col-lg-4 py-3 wow fadeInLeft" >
             <div class="card card-body border-0 text-center shadow pt-5">
               <div class="svg-icon mx-auto mb-4">
-                <img src="../assets/img/icons/payment.png" alt="">
+                <img src="img/icons/payment.png" alt="">
               </div>
               <h5 class="fg-gray">Tanpa Paku</h5>
               <p class="text-unik">Rumah Gadang tidak menggunakan paku untuk merekatkan antar komponennya.</p>
@@ -185,7 +185,7 @@
           <div class="col-md-6 col-lg-4 py-3 wow fadeInUp">
             <div class="card card-body border-0 text-center shadow pt-5">
               <div class="svg-icon mx-auto mb-4">
-                <img src="../assets/img/icons/customizable.png" alt="">
+                <img src="img/icons/customizable.png" alt="">
               </div>
               <h5 class="fg-gray">Tampak samping</h5>
               <p class="text-unik">Rumah Gadang tidak menggunakan paku untuk merekatkan antar komponennya.</p>
