--- a/Testimoni.html
+++ b/Testimoni.html
@@ -16,7 +16,7 @@
   
     <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
   
-    <title>Testimoni  Pelanggan GrhaBlock</title>
+    <title>Testimoni Pelanggan GrhaBlock</title>
     
     <link rel="shortcut icon" href="img/logo_2.png" type="image/x-icon">
   
@@ -29,6 +29,23 @@
     <link rel="stylesheet" href="css/bootstrap.css">
   
     <link rel="stylesheet" href="css/mobster.css">
+    <!--Download  Font Dosis--->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
+    <!--Download  Font  Baloo Bhai 2  --->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@700&family=Dosis:wght@700&display=swap" rel="stylesheet">
+    <!--Download Font Quicksand-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
+
+    <!--Download Font Audiowide-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
   </head>
 <body>
       <!--logo Grha  block-->
