--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
       <link rel="stylesheet" href="css/bootstrap.css">
     
       <link rel="stylesheet" href="css/mobster.css">
+
+      <!--Download  Font Dosis--->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
+      <!--Download  Font  Baloo Bhai 2  --->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@700&family=Dosis:wght@700&display=swap" rel="stylesheet">
+      <!--Download Font Quicksand-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
+
+      <!--Download Font Audiowide-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+
     </head>
 <body>
   <!--navigation bar  -->
@@ -54,14 +73,27 @@
           <a class="nav-link" href="Testimoni.html"style ="color:black;">Testimoni</a>
         </li>
         <!--Masih terdapat kesalahan  dropdown -->
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:black;">Produk kami</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="color:black;">
+            <!---Konten yang dimasukkan ditujukan  untuk  meneganalkan  begitu pentingnya  mencintai  
+            budaya indonesia khususnya  rumah adat-->
+            <a class="dropdown-item active" href="Joglo.html">Grha Block Rumah Joglo</a>
+            <a class="dropdown-item" href="Tongkonan.html">Grha Block Rumah Tongkonan</a>
+            <a class="dropdown-item" href="Gadang.html">Grha Block Rumah Gadang</a>
+            <a class="dropdown-item" href="#" style="color:black; font-family: 'Quicksand', sans-serif;">Custom Produk</a>
+          </div>
+        </li>
       </ul>
-      <div class="ml-auto my-2 my-lg-0">
-        <a href="https://wa.me/62895363208117"><button class="btn btn-gradient rounded-pill" style="margin-right:180px; margin-top:-20px;">Tanya Admin Sekarang!</button></a>
+      <div class="ml-auto my-2 my-lg-0" style="margin-right:-150px;">
+        <a href="https://wa.me/62895363208117"><button class="btn btn-gradient rounded-pill" style="margin-right:80px; margin-top:-20px; font-family: 'Quicksand', sans-serif;">Tanya Admin Sekarang!</button></a>
         <!--nanti diberikan  link  Whatsapp  Untuk melakukan pemesanan-->
       </div>
     </div>
   </div>
 </nav>
+
+<!--menjelaskan gambar mengenai  rumah gadang-->
   
 <div class="page-hero-section bg-image hero-home-2" style="background-image: url(img/halamanwebproduct.png);">
   <div class="hero-caption">
@@ -78,10 +110,7 @@
           <a href="#" class="btn btn-outline-primary rounded-pill">lihat video</a>
         </div>
         <div class="col-lg-6 d-none d-lg-block wow zoomIn">
-          <div class="img-place mobile-preview shadow floating-animate">
-            <!--gambar asli rumah gadang-->
-            <img src="img/rumahgadang.jpg" style ="height:500px; width:500px;" alt="">
-          </div>          
+          <img src="product/web_gadang/gadang_sampingkiri.png" style="height:400px; width:400px; border-radius:5%;" alt="">         
         </div>
       </div>
     </div>
@@ -108,7 +137,7 @@
             </div>
             <div class="iconic-content">
               <h5 style="color:blue;">Tahukah kamu tentang sejarah rumah Gadang?</h5>
-              <p>Di luar Sumatera Barat, jenis rumah adat khas Minangkabau populer dengan sebutan rumah gadang. Di kampung halamannya sendiri, rumah tradisional ini lebih dikenal dengan sebutan ‘rumah bagonjong’. Menurut sejarah aslinya, tidak semua wilayah di Sumatera Barat dapat dibangun rumah adat seperti ini. Rumah bagonjong hanya didirikan di kawasan tertentu yang berstatus nagari. Karena itulah, eksistensi rumah bagonjong atau rumah gadang di luar Minangkabau terjadi karena aturan adat yang melemah seiring perkembangan zaman.</p>
+              <p style="font-family: 'Quicksand', sans-serif;">Di luar Sumatera Barat, jenis rumah adat khas Minangkabau populer dengan sebutan rumah gadang. Di kampung halamannya sendiri, rumah tradisional ini lebih dikenal dengan sebutan ‘rumah bagonjong’. Menurut sejarah aslinya, tidak semua wilayah di Sumatera Barat dapat dibangun rumah adat seperti ini. Rumah bagonjong hanya didirikan di kawasan tertentu yang berstatus nagari. Karena itulah, eksistensi rumah bagonjong atau rumah gadang di luar Minangkabau terjadi karena aturan adat yang melemah seiring perkembangan zaman.</p>
             </div>
           </div>
        </div>
@@ -161,8 +190,8 @@
   </div>
 </div> 
 
-<!--nilai - nilai  keunikan yang ada pada rumah  adat tsbt -->
 
+<!--nilai - nilai  keunikan yang ada pada rumah  adat tsbt -->
 <div class="page-section no-scroll bg-image" style="background-image:url(img/introproduk.png);">
   <div class="container">
     <h2 class="text-center wow fadeIn" style="font-family:dosis;">Apa saja sih keunikan  dari Rumah Gadang ini?</h2>
@@ -212,113 +241,23 @@
   </div>
 </div>
 
-<!-- Testimonials -->
-<div class="page-section bg-image" style="background-image:url(img/body_tentangkami.png);">
-  <div class="container">
-    <div class="row justify-content-center text-center">
-      <div class="col-lg-6 wow fadeIn">
-        <h2>Bagaimana pendapat mereka setelah menggunakan produk Grha Block?</h2>
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid bg-image" style="background-image:url(img/introproduk.png);">
-    <div class="owl-carousel stack-carousel mt-5 wow fadeInUp">
-      <div class="item bg-white">
-        <!--untuk menambahkan  rating-->
-        <div class="ratings fs-small py-3">
-          <span class="icon mai-star"></span>
-          <span class="icon mai-star"></span>
-          <span class="icon mai-star"></span>
-          <span class="icon mai-star"></span>
-          <span class="icon mai-star-half"></span>
-        </div>
-  
-        <div class="caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem distinctio esse eum laudantium necessitatibus autem perferendis quod ipsum eaque.</div>
-  
-        <div class="avatar mt-3">
-          <div class="avatar-img">
-            <img src="img/person/person_1.png" alt="">
-          </div>
-          <div class="avatar-caption">
-            <p class="mb-0 fw-medium fg-primary">Galih Raugana</p>
-            <div class="fs-vsmall fw-medium">UI Designer</div>
-          </div>
-        </div>
-      </div>
-      <div class="item bg-white">
-        <div class="ratings fs-small py-3">
-          <span class="icon mai-star"></span>
-          <span class="icon mai-star"></span>
-          <span class="icon mai-star"></span>
-          <span class="icon mai-star"></span>
-          <span class="icon mai-star-half"></span>
-        </div>
-
-        <div class="caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem distinctio esse eum laudantium necessitatibus autem perferendis quod ipsum eaque.</div>
-  
-        <div class="avatar mt-3">
-          <div class="avatar-img">
-            <img src="../assets/img/person/person_2.png" alt="">
-          </div>
-          <div class="avatar-caption">
-            <p class="mb-0 fw-medium fg-primary">Galih Raugana</p>
-            <div class="fs-vsmall fw-medium">Graphic Designer</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="item bg-white">
-        <div class="ratings fs-small py-3">
-          <span class="icon mai-star"></span>
-          <span class="icon mai-star"></span>
-          <span class="icon mai-star"></span>
-          <span class="icon mai-star"></span>
-          <span class="mai-star"></span>
-        </div>
-  
-        <div class="caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem distinctio esse eum laudantium necessitatibus autem perferendis quod ipsum eaque.</div>
-  
-        <div class="avatar mt-3">
-          <div class="avatar-img">
-            <img src="../assets/img/person/person_3.png" alt="">
-          </div>
-          <div class="avatar-caption">
-            <p class="mb-0 fw-medium fg-primary">Galih Raugana</p>
-            <div class="fs-vsmall fw-medium">Data Analyst</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!---FAQ has Deleted-->
-<!-- Pasrtner produksi  Grha  Block -->
-<div class="page-section bbg-iamge" style="background-image:url(img/halaman4.png);">
+<!-- Partner produksi  Grha  Block -->
+<div class="page-section bg-image-parallax" style="background-image:url(img/blogs/kenapagrhablock.jpg); background-size:cover; height:500px;">
   <div class="container">
     <div class="text-center wow fadeIn">
-      <h2 class="mb-4" style="color:#283618; font-family:baloo bhai;">Partner Kami</h2>
-      <p>Ingin jadi partner kami?<a href="mailto:pkmgrha2021@gmail.com">klik disini</a></p>
+      <h2 class="mb-4" style="color:white; font-family:baloo bhai;">Partner Kami</h2>
+      <p style="color:white;">Ingin jadi partner kami?<a href="mailto:pkmgrha2021@gmail.com">klik disini</a></p>
     </div>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-5 justify-content-center align-items-center mt-5">
-      <div class="p-3 wow zoomIn">
+      <div class="p-3 zoomInUp">
         <div class="img-place client-img">
-          <img src="../assets/img/clients/alter_sport.png" alt="">
-        </div>
-      </div>
-      <div class="p-3 wow zoomIn">
-        <div class="img-place client-img">
-          <img src="../assets/img/clients/cleaning_service.png" alt="">
-        </div>
-      </div>
-      <div class="p-3 wow zoomIn">
-        <div class="img-place client-img">
-          <img src="../assets/img/clients/creative_photo.png" alt="">
+          <img src="img/clients/execute.jpeg" style="width:100px; height:100px; border-radius:50%;" alt="">
         </div>
       </div>
     </div>
   </div>
 </div>
+
 <div class="page-footer-section bg-dark fg-white">
   <div class="page-footer-section bg-dark fg-white">
     <div class="container mb-5">
