--- a/index.html
+++ b/index.html
@@ -100,15 +100,16 @@
       <div class="row align-items-center h-100">
         <div class="col-lg-6 wow fadeInUp">
           <div class="badge badge-soft mb-2"></div>
-          <h1 class="mb-4 fw-normal" style="font-family:Dosis; color:black; text-shadow:2px 2px 2px black; letter-spacing: 5px; font-size:70px;"><span style="color:blue;">G</span><span style="color:chartreuse;">r</span><span style="color:yellow;">h</span><span style="color:red;">a</span><span style="color:blue;">B</span><span style="color:chartreuse;">l</span><span style="color:yellow;">o</span><span style="color:red;">c</span><span style="color:blue;">k</span></h1><h1 style="font-family: 'Baloo Bhai 2', cursive; color:blue; text-shadow:2px 2px 2px black; font-size:70px;">R<span style="color:yellow;">u</span><span style="color:green;">m</span><span style="color:red;">a</span><span style="color:blue;">h</span><span style="color:yellow;">G</span><span style="color:green;">a</span><span style="color:yellow;">d</span><span style="color:red;">a</span><span style="color:yellow;">n</span><span style="color:green;">g</span></h1>
+          <h1 class="mb-4 fw-normal" style="font-family:Dosis; color:black; text-shadow:2px 2px 2px black; letter-spacing: 5px; font-size:70px;"><span style="color:blue;"></h1><h1 style="font-family: 'Baloo Bhai 2', cursive; color:blue; text-shadow:3px 3px 3px black; font-size:70px;">R<span style="color:yellow;">u</span><span style="color:greenyellow;">m</span><span style="color:red;">a</span><span style="color:blue;">h</span><span style="color:yellow;">G</span><span style="color:greenyellow;">a</span><span style="color:yellow;">d</span><span style="color:red;">a</span><span style="color:greenyellow;">n</span><span style="color:blue;">g</span></h1>
           <!--penjelasan singkat mengenai desain  masing - masing  produk grablock-->
           <h5 class="mb-4" style ="font-family: 'Baloo Bhai 2', cursive; color:blueviolet;">Rumah adat Sumatera Barat</h5>
           <!--link video profil  rumah  gadang-->
-          <a href="https://www.youtube.com/embed/EFS8vLgf090" class="btn btn-primary rounded-pill">Lihat Video</a>
+          <a href="https://www.youtube.com/embed/EFS8vLgf090" class="btn btn-primary rounded-pill">Lihat Video Disini!</a>
           
         </div>
         <div class="col-lg-6 d-none d-lg-block wow zoomIn">
-          <img src="img/rumahgadang.jpg" style="height:400px; width:600px; border-radius:5%;" alt="">      
+          <img src="img/rumahgadang.jpg" style="height:400px; width:600px; border-radius:5%;" alt="">  
+          <p style="color:blueviolet; font-size:10px;">https://blog-awak.blogspot.com/2011/09/asal-usul-bentuk-rumah-gadang.html</p>    
         </div>
       </div>
     </div>
